Themen und Inhalte einfügen/erstellen/zusammenführen

--- a/templates/page.htm
+++ b/templates/page.htm
@@ -12,7 +12,7 @@
 <meta name="author" content="Jumi">
 
 <!-- Favicon -->
-<link rel="icon" href="assets/img/ico/jumi.ico">
+<link rel="icon" href="../assets/img/ico/jumi.ico">
 <title>jumi</title>
 
 <!-- Debuger (falls nötig)
@@ -20,10 +20,10 @@
         <style>* {border: 1px solid red;}</style>-->
 
 <!-- Layout -->
-<link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/menu.css">
-<link rel="stylesheet" href="assets/css/modal.css">
-<link rel="stylesheet" href="assets/css/media-queries.css">
+<link rel="stylesheet" href="../assets/css/main.css">
+<link rel="stylesheet" href="../assets/css/menu.css">
+<link rel="stylesheet" href="../assets/css/modal.css">
+<link rel="stylesheet" href="../assets/css/media-queries.css">
 
 </head>
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
@@ -44,13 +44,13 @@
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
 <li><a href="https://www.jumi.biz/Content"><i class="menu-icon">
-<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/Links"><i class="menu-icon">
-<img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/Cheats"><i class="menu-icon">
-<img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="https://www.jumi.biz/pages/Links"><i class="menu-icon">
+<img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="https://www.jumi.biz/pages/Cheats"><i class="menu-icon">
+<img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 <li><a href="https://www.jumi.biz"><i class="menu-icon">
-<img src="assets/img/ico/jumi.ico" alt="WTF is jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+<img src="../assets/img/ico/jumi.ico" alt="WTF is jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
 </nav>
@@ -100,16 +100,16 @@
 
 <footer>
 <!-- IMPRESSUM -->
-<span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
+<span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
 <!-- contact@jumi.biz -->
 <span class="jumi-email">contact&#64;jumi.biz</span>
 <!-- Site Features -->
-<span class="flex siteFeatures"><a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
+<span class="flex siteFeatures"><a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="../assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
 </footer>
 
 <!-- Skripte -->
-    <script src="assets/js/menu.js"></script>
-	<script src="assets/js/modal.js"></script>
+    <script src="../assets/js/menu.js"></script>
+	<script src="../assets/js/modal.js"></script>
 
 </body>
 </html>
