Themen und Inhalte einfügen/erstellen/zusammenführen

--- a/templates/Links.htm
+++ b/templates/Links.htm
@@ -7,9 +7,16 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <!-- Metadaten -->
-<meta name="description" content="IT-Themensammlung und kompaktes Nachschlagewerk">
-<meta name="keywords" content="IT,Technologie,Computer,PC,Systeme,Netzwerke,Linux,Windows,Administration,Programmieren,Code,Shell,Terminal,Syntax,Snippets,Vorlagen,Lernen,verstehen">
-<meta name="author" content="Jumi">
+<meta name="description" content="
+Sammlung von Themen über Informatik, kompakt.
+"><meta name="keywords" content="
+linux,windows,sicherheit,hacking,
+administration,code,shell,terminal,syntax,
+tool,programm,it,informatik,information,
+technologie,fachinformatik,computer,pc,
+system,netzwerk,integration,programmierung
+snippets,vorlagen,lernen,verstehen,
+"><meta name="author" content="Jumi">
 
 <!-- Favicon -->
 <link rel="icon" href="assets/img/ico/jumi.ico">
@@ -44,13 +51,13 @@
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
 <li><a href="https://www.jumi.biz/Content"><i class="menu-icon">
-<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
 <li><a href="https://www.jumi.biz/pages/Links"><i class="menu-icon">
-<img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
 <li><a href="https://www.jumi.biz/pages/Cheats"><i class="menu-icon">
-<img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 <li><a href="https://www.jumi.biz"><i class="menu-icon">
-<img src="assets/img/ico/jumi.ico" alt="WTF is jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+<img src="../assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
 
 </ul>
 </nav>
