inserted html, fixed URLs

--- a/templates/page.htm
+++ b/templates/page.htm
@@ -8,14 +8,15 @@
 
 <!-- Metadaten -->
 <meta name="description" content="
-Sammlung von Themen über Informatik, kompakt.
+
+
+
+
 "><meta name="keywords" content="
-linux,windows,sicherheit,hacking,
-administration,code,shell,terminal,syntax,
-tool,programm,it,informatik,information,
-technologie,fachinformatik,computer,pc,
-system,netzwerk,integration,programmierung
-snippets,vorlagen,lernen,verstehen,
+
+
+
+
 "><meta name="author" content="Jumi">
 
 <!-- Favicon -->
@@ -50,11 +51,11 @@ snippets,vorlagen,lernen,verstehen,
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://www.jumi.biz/Content"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
 <img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/pages/Links"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/pages/Links.htm"><i class="menu-icon">
 <img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/pages/Cheats"><i class="menu-icon">
+<li><a href="https://www.jumi.biz/pages/Cheats.htm"><i class="menu-icon">
 <img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 <li><a href="https://www.jumi.biz"><i class="menu-icon">
 <img src="../assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
@@ -117,6 +118,12 @@ snippets,vorlagen,lernen,verstehen,
 <!-- Skripte -->
     <script src="../assets/js/menu.js"></script>
 	<script src="../assets/js/modal.js"></script>
+    <!-- for Easteregg Project:
+    <script src="../assets/js/read.js"></script> -->
+
+    <!-- PDF-Export-Script (jsPDF):
+https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
+<script src="../assets/js/jspdf.umd.min.js"> -->
 
 </body>
 </html>
