removed glowing parts

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@ b {
     color: #ffbfea;
     animation: neon .08s ease-in-out infinite alternate;
 }
-#boltNoGlowing > b {
+#boltNoGlowing {
     color: #ffbfea;
     animation: none;
 }
