trying header color for bolt text and removed glow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,7 +73,7 @@ main {
 }
 img {width: 100%;}
 .content > h1, h2, h3, h4 {color: #8dd88e;}
-.content a {color: #00bfff;}
+.content a {color: #00f0f0;}
 .content a:hover {
     text-decoration: none;
     color: #ffbfea;
