--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,10 @@ main {
     font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 .content > h1, h2 {color: #8dd88e;}
-.content > h3, h4 {color: #ffbfea;}
+.content > h3, h4 {
+    color: #ffbfea;
+    text-shadow: none;
+}
 .content a {color: #00f0f0;}
 .content a:hover,
 .content a:focus {
