--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,9 +6,9 @@ main {
     padding-bottom: 6rem;
     font-family: Verdana, Arial, Helvetica, sans-serif;
 }
-.content > h1, h2 {color: #8dd88e;}
+.content > h1, h2 {color: #ffbfea;}
 .content > h3, h4 {
-    color: #ffbfea;
+    color: #8dd88e;
     text-shadow: none;
 }
 .content a {color: #00f0f0;}
