--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -18,6 +18,7 @@ dialog[open] {
   border-radius: 0.3rem;
   text-shadow: 1.5px 2px black;
   background-color: #131313;
+  color: #8dd88e; /* grün */
   border: none;
   box-shadow:
     rgba(0, 240, 240, 0.4) 0px 2px 4px,
