--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,3 @@
-body {
-    min-height: 100vh;
-    text-rendering: optimizeSpeed; /* Set core body defaults */
-    line-height: 1.5;
-    height: 100%; /* Footer-unten-halten-Loesung */
-    position: relative; /* Footer-unten-halten-Loesung */
-    letter-spacing: 0.1rem;
-    background-color: #000;
-    margin: 0;
-    padding: 0;
-}
 @font-face {
      font-family: 'Sarpanch';
      font-style: normal;
@@ -21,146 +10,6 @@ body {
     , url('../fonts/sarpanch-v11-latin-regular.svg#Sarpanch') format('svg')
     /* Legacy iOS */ ;
 }
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-a:not([class]) { /* <a> tags ohne class= bekommen Standard-Stil */
-    text-decoration-skip-ink: auto;
-}
-p {
-    display: inline-block;
-    line-height: 1.337rem;
-}
-i {
-    font-size: 0.75rem;
-}
-dt {
-    font-size: 1.3rem;
-}
-ul > li {
-    list-style: none;
-}
-code {
-    display: inline-table;
-    font-family: 'Source Code Pro', monospace;
-    color: #8dd88e;
-    text-align: left;
-    background-color: #000000;
-    text-shadow: none;
-    max-width: 100%;
-    padding-left: 0.6em;
-    padding-right: 0.6em;
-    font-size: 0.75rem;
-}
-mark {
-    color: #000;
-    padding-left: 0.2em;
-    padding-right: 0.2em;
-    background-color: #8dd88e;
-    font-size: 0.75rem;
-}
-
-ul, ol {list-style: none;} /* Keine Listenpunkte */
-img {width: 100%;}
-
-/* Header */
-header {
-    text-shadow: 1.5px 2px black;
-    background: #131313;
-    color: #00f0f0;
-    padding: 2em 4em 1.5em 1.5em;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    font-family: 'Sarpanch', sans-serif;
-    box-shadow:
-        rgba(0, 240, 240, 0.4) 0px 2px 4px,
-        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
-}
-
-header::after {
-    content: "";
-    clear: both;
-    display: block;
-}
-
-.header-content {
-    width: 95%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    letter-spacing: 0.2em;
-}
-.jumi-logo,.profil-links {
-    top: 0.5em;
-    left: 1em;
-    position: absolute;
-    font-size: 1.337rem;
-    margin: 0;
-}
-.jumi-logo a {
-    cursor: pointer;
-    animation: neon .08s ease-in-out infinite alternate;
-    text-decoration: none;
-    color: inherit;
-}
-
-
-/* Impressum */
-footer {
-    position: absolute;
-    display: block;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    padding: 1rem 0 4rem 0;
-    background-color: #131313;
-    color: #ffbfea;
-    text-align: center;
-    text-shadow: 1.5px 2px black;
-    font-family: 'Sarpanch', sans-serif;
-    font-size: 1.3rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow:
-        rgba(0, 240, 240, 0.4) 0px 2px 4px,
-        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
-}
-.jumi-email {
-    font-weight: 200;
-    color: #00f0f0;
-    text-decoration: none;
-    text-align: center;
-    animation: neon .08s ease-in-out infinite alternate;
-}
-.siteFeatures {
-    top: 0.5em;
-    right: 1em;
-    position: absolute;
-    font-size: 1.337rem;
-    margin: 0;
-    cursor: pointer;
-}
-#exportIcon {display:none;}
-#instagramIcon {display:none;}
-
-/* # Sonstiges */
-
-body::-webkit-scrollbar { /* Scrollleiste ausblenden */
-    width: 0.5em;
-    display: none;
-}
-
-.kleintxt {font-size:small;}
-
-#dl-link {padding: 0.6rem;}
-
 @keyframes clipPathCircleOpen {
      0% {clip-path: circle(0% at top right);}
      100% {clip-path: circle(250% at top right);}
@@ -201,6 +50,155 @@ body::-webkit-scrollbar { /* Scrollleiste ausblenden */
      90% {transform: translate(10%,5%)}
      100% {transform: translate(5%,0)}
 }
+body {
+    min-height: 100vh;
+
+/* Set core body defaults */
+    text-rendering: optimizeSpeed;
+
+/* Footer-unten-halten-Loesung */
+    height: 100%;
+/* Footer-unten-halten-Loesung */
+    position: relative;
+
+    line-height: 1.5;
+    letter-spacing: 0.1rem;
+    background-color: #000;
+    margin: 0;
+    padding: 0;
+}
+body::-webkit-scrollbar { /* Scrollleiste ausblenden */
+    width: 0.5em;
+    display: none;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+a:not([class]) {
+/* <a> tags ohne class= bekommen Standard-Stil */
+    text-decoration-skip-ink: auto;
+}
+p {
+    display: inline-block;
+    line-height: 1.337rem;
+}
+i {
+    font-size: 0.75rem;
+}
+dt {
+    font-size: 1.3rem;
+}
+ul > li {
+    list-style: none;
+}
+code {
+    display: inline-table;
+    font-family: 'Source Code Pro', monospace;
+    color: #8dd88e;
+    text-align: left;
+    background-color: #000000;
+    text-shadow: none;
+    max-width: 100%;
+    padding-left: 0.6em;
+    padding-right: 0.6em;
+    font-size: 0.75rem;
+}
+mark {
+    color: #000;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    background-color: #8dd88e;
+    font-size: 0.75rem;
+}
+/* Keine Listenpunkte */
+ul, ol {list-style: none;}
+
+img {width: 100%;}
+
+/* Header */
+header {
+    text-shadow: 1.5px 2px black;
+    background: #131313;
+    color: #00f0f0;
+    padding: 2em 4em 1.5em 1.5em;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Sarpanch', sans-serif;
+    box-shadow:
+        rgba(0, 240, 240, 0.4) 0px 2px 4px,
+        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+}
+header::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+/* Impressum */
+footer {
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 1rem 0 4rem 0;
+    background-color: #131313;
+    color: #ffbfea;
+    text-align: center;
+    text-shadow: 1.5px 2px black;
+    font-family: 'Sarpanch', sans-serif;
+    font-size: 1.3rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow:
+        rgba(0, 240, 240, 0.4) 0px 2px 4px,
+        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+}
+.header-content {
+    width: 95%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    letter-spacing: 0.2em;
+}
+.jumi-logo,.profil-links {
+    top: 0.5em;
+    left: 1em;
+    position: absolute;
+    font-size: 1.337rem;
+    margin: 0;
+}
+.jumi-logo a {
+    cursor: pointer;
+    animation: neon .08s ease-in-out infinite alternate;
+    text-decoration: none;
+    color: inherit;
+}
+.jumi-email {
+    font-weight: 200;
+    color: #00f0f0;
+    text-decoration: none;
+    text-align: center;
+    animation: neon .08s ease-in-out infinite alternate;
+}
+.siteFeatures {
+    top: 0.5em;
+    right: 1em;
+    position: absolute;
+    font-size: 1.337rem;
+    margin: 0;
+    cursor: pointer;
+}
+.kleintxt {font-size:small;}
+
+#dl-link {padding: 0.6rem;}
+#exportIcon {display:none;}
+#instagramIcon {display:none;}
 
 
 
