--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,7 +88,7 @@ main {
     padding-left: 1em;
     border: 3px solid #133337;
 }
-#bigHL {
+//#bigHL {
     height:100%;
     display: flex;
     align-items: center;
