--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,49 +1,9 @@
-/* Layout */
 main {
-    color: #ebebd3;
-    padding-top: 1rem;
-    padding-bottom: 8rem;
+    padding-top: 1rem;padding-bottom: 8rem;
     font-family: Verdana, Arial, Helvetica, sans-serif;
 }
-.content > h1 {
-    color: #ffbfea; /* pink */
-    animation: neon .08s ease-in-out infinite alternate;
-    text-shadow: none;}
-.content > h2, h3, h4 {
-    color: #8dd88e; /* grün */
-    margin-top: 1.3em;
-}
-.content a,
-.content b {color: #00f0f0;} /* blau */
-.content a:hover,
-.content a:focus {
-    text-decoration: none;
-    color: #ffbfea; /* pink */
-    animation: neon .08s ease-in-out infinite alternate;
-    text-shadow: none;
-}
-.content b {color: #00f0f0;} /* blau */
-.content:nth-child(1) {grid-area: one;}
-.content:nth-child(2) {grid-area: two;}
-.content:nth-child(3) {grid-area: three;}
-.content:nth-child(4) {grid-area: four;}
-.content:nth-child(5) {grid-area: five;}
-.content {
-    padding: 1rem;
-    border-radius: 0.3rem;
-    box-shadow:
-        rgba(0, 240, 240, 0.4) 0px 2px 4px,
-        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
-    text-shadow: 1.5px 2px black;
-    background-color: #131313;
-    position: relative;
-    align-items: center;
-    justify-content: space-around;
-}
 .grid-container {
-    display: grid;
-    gap: 1rem;
+    display: grid;gap: 1rem;
     grid-auto-columns: 1fr;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-areas: 'one' 'two' 'three' 'four' 'five';
@@ -51,43 +11,39 @@ main {
     margin-inline: auto;
     justify-content: space-between;
 }
-.flow > *:where(:not(:first-child)) {
-    margin-top: var(--flow-spacer, 0.2rem);
+.content {
+    background-color: #131313;
+    position: relative;
+    text-shadow: 1.5px 2px #000;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1rem;border-radius: 0.3rem;
+    box-shadow:
+        rgba(0, 240, 240, 0.4) 0px 2px 4px,
+        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
 }
-.flex {
-    display: flex;
-    gap: var(--gap, 0.6rem);
+.content:nth-child(1) {grid-area: one;}
+.content:nth-child(2) {grid-area: two;}
+.content:nth-child(3) {grid-area: three;}
+.content:nth-child(4) {grid-area: four;}
+.content:nth-child(5) {grid-area: five;}
+.content h1 {color: #ffbfea; /* pink */}
+.content > h2, h3, h4 {color: #8dd88e;margin-top: 1.3em;} /* green */
+.content > a, b {color: #00f0f0;} /* blue */
+.content > a:hover, a:focus {
+    color: #ffbfea; /* pink */
+    text-shadow: none;text-decoration: none;
+    animation: neon .08s ease-in-out infinite alternate;
 }
+.content > ul, ol {list-style: none;}
+.content img {width: 100%;}
 .inside-content {
     height:100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
-.in-inside {
-    height:100%;
-    margin-top: 0;
-}
-}
-#bigHL {
-    width: 100%;
-    text-align: center;
-}
-
-
-//.window-content { /* Code-Syntax */
-    align-self: flex-start;
-    width: auto;
-    color: #ebebd3;
-    display: inline-block;
-    text-decoration: none;
-    color: inherit;
-    flex-direction: row;
-    font-size: 0.65em;
-    font-family: 'Source Code Pro', monospace;
-    line-height: 1.337em;
-    max-width: 640px;
-    text-align: left;
-    text-shadow: none;
-    padding-left: 1em;
-    border: 3px solid #133337;
+.in-inside {height:100%;margin-top: 0;}
+.flow > *:where(:not(:first-child)) {margin-top: var(--flow-spacer, 0.2rem);}
+.flex {display: flex;gap: var(--gap, 0.6rem);}
