--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -88,6 +88,7 @@ button:hover {
     display: inline-block;
     margin-right: 1em;
     width: 1.1em;
+    font-size: 0.75rem;
     text-align: right;
     color: rgba(255, 255, 255, 0.4);
 }
