--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,7 +85,4 @@ main {
     padding-left: 1em;
     border: 3px solid #133337;
 }
-#bigHL {
-    width: 100%;
-    text-align: center;
-}
+#bigHL {width: 100%;text-align: center;}
