CSS hard-debugging

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,7 @@ footer {
 #dl-link {padding: 0.6rem;}
 #exportIcon {display:none;}
 #instagramIcon {display:none;}
+#disabled {display:none;}
 
 
 
